--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" integrity="sha256-h20CPZ0QyXlBuAw7A+KluUYx/3pK+c7lYEpqLTlxjYQ=" crossorigin="anonymous" />
   <title>Expense Tracker</title>
 </head>
 <body>
@@ -22,10 +23,10 @@
         <h4>Expense</h4>
         <p id="money-minus" class="money minus">+$0.00</p>
       </div>
-
+    </div>
       <h3>History</h3>
       <ul id="list" class="list">
-        <li class="minus">Cash <span>$400</span><button class="delete-btn"></button></li>
+        <li class="minus">Cash <span>$400</span><button class="delete-btn">x</button></li>
       </ul>
 
       <h3>Add new transaction</h3>
